--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                       </a>
                       <ul class="subnav">
                         <li><a style="color: blue;" href="formDangNhap.html"><i class="fa-solid fa-user"></i> Đăng nhập</a></li>
-                        <li><a style="color: green;" href="formDangKi.html"><i class="fa-solid fa-right-from-bracket"></i> Đăng kí</a></li>
+                        <li><a style="color: green;" href="formDangKy.html"><i class="fa-solid fa-right-from-bracket"></i> Đăng kí</a></li>
                       </ul>
                     </li>
                 </ul>
