--- a/formDangNhap.html
+++ b/formDangNhap.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/login.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="static/js/login.js"></script>
     <script src="static/js/header.js"></script>
@@ -47,7 +48,7 @@
             <div id="wrapper">
                 <form action="" id="form-login">
                     <div style="display: flex; width: 100%; justify-content: center; margin-bottom: 20px;">
-                      <img style="width: 25%; border-radius: 50%;" src="static/img/phuan1.png" alt="logo">
+                      <img style="width: 90px; border-radius: 50%;" src="static/img/phuan1.png" alt="logo">
                       <div>
                         <span class="form-heading">&nbsp;&nbsp;&nbsp;ĐĂNG NHẬP</span>
                       </div>
@@ -72,9 +73,9 @@
                         <a href="#" style="color: #09f; font-size: 12px;">Quên mật khẩu?</a>
                       </div>
                     </div>
-                    <input type="submit" value="Đăng nhập" class="form-submit">
+                    <button style="" type="submit" class="form-submit">Đăng nhập</button>
                     <div style="width: 100%; text-align: center; padding: 10px;">
-                        <span style="color: #fff; font-size: 11px;">Chưa có tài khoản</span>
+                        <span style="color: #fff; font-size: 11px;">Bạn chưa có tài khoản</span>
                         <a href="formDangKy.html" style="color: #09f; font-size: 12px;">Đăng ký ngay</a>
                     </div>
                     <div style="display: flex; margin-top: 20px;">
